# px4-ros2-drone-nav

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  CPP_BEST_PRACTICES.md  INVESTIGATION.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md
docker/: Dockerfile
docs/: MVP_SIMULATION.md  architecture.md  build_and_run.md  configuration.md  development.md  diagnostics.md  drone_control.md  gazebo_simulation.md  installation.md  known_passages.md  navigation_pipeline.md  obstacle_mapping.md  overview.md  performance.md  replanning.md  rviz.md  terminal_capture.md  testing.md  trajectory_optimization.md  troubleshooting.md
drone_city_nav/: CMakeLists.txt  package.xml
drone_city_nav/config/: real_drone_template.yaml  urban_mvp.yaml
drone_city_nav/include/drone_city_nav/: ambiguous_lidar_hit_tracker.hpp  astar_planner.hpp  clearance_field.hpp  control_projection_smoothing.hpp  corner_rounding.hpp  corridor.hpp  corridor_samples_io.hpp  current_lidar_overlay.hpp  debug_image.hpp  distance_field.hpp  final_trajectory_debug_io.hpp  grid_config.hpp  grid_overlay.hpp  known_passage_debug_markers.hpp  known_passage_geometry.hpp  known_passage_map.hpp  known_passage_matching.hpp  known_passage_solid_validation.hpp  known_passage_solid_volumes.hpp  known_passage_validation.hpp  known_static_lidar_hit_classifier.hpp  lidar_beam_observation.hpp  lidar_debug_node_config.hpp  lidar_debug_pointclouds.hpp  lidar_debug_renderer.hpp  lidar_debug_snapshot_pipeline.hpp  lidar_ingestion_decision.hpp  lidar_memory_hit_diagnostics.hpp  lidar_motion_compensation.hpp  lidar_pose_history.hpp  lidar_projection.hpp  lidar_radar_markers.hpp  lidar_snapshot_writer.hpp  navigation_pose.hpp  obstacle_memory.hpp  obstacle_memory_provenance_ros.hpp  occupancy_grid.hpp  offboard_blackbox.hpp  offboard_debug_markers.hpp  offboard_path_follower.hpp  (+56 more)
drone_city_nav/launch/: city_nav.launch.py
drone_city_nav/models/lidar_2d_v2/: model.config  model.sdf
drone_city_nav/models/x500_lidar_2d/: model.config  model.sdf
drone_city_nav/msg/: CrashState.msg  ExecutableTrajectory.msg  ObstacleMemoryCellProvenance.msg  ObstacleMemoryHitObservation.msg  ObstacleMemoryProvenance.msg  ObstacleMemorySnapshot.msg  ReplanBlockerEvent.msg  ReplanTruncation.msg  TruncationSuffixAck.msg
drone_city_nav/rviz/: city_nav_debug.rviz  city_nav_debug_top_down.rviz
drone_city_nav/scripts/: px4_mission_node.py
drone_city_nav/src/: ambiguous_lidar_hit_tracker.cpp  astar_planner.cpp  clearance_field.cpp  collision_crash_node.cpp  control_projection_smoothing.cpp  corner_rounding.cpp  corridor.cpp  corridor_samples_io.cpp  current_lidar_overlay.cpp  debug_image.cpp  distance_field.cpp  drone_contact_system.cpp  final_trajectory_debug_io.cpp  grid_config.cpp  grid_overlay.cpp  known_passage_debug_markers.cpp  known_passage_geometry.cpp  known_passage_map.cpp  known_passage_matching.cpp  known_passage_solid_validation.cpp  known_passage_solid_volumes.cpp  known_passage_validation.cpp  known_static_lidar_hit_classifier.cpp  lidar_beam_observation.cpp  lidar_debug_node.cpp  lidar_debug_node.hpp  lidar_debug_node_callbacks.cpp  lidar_debug_node_config.cpp  lidar_debug_node_lifecycle.cpp  lidar_debug_node_points.cpp  lidar_debug_node_snapshot.cpp  lidar_debug_pointclouds.cpp  lidar_debug_renderer.cpp  lidar_debug_snapshot_pipeline.cpp  lidar_ingestion_confidence.cpp  lidar_ingestion_decision.cpp  lidar_memory_hit_diagnostics.cpp  lidar_pose_history.cpp  lidar_projection.cpp  lidar_radar_markers.cpp  (+117 more)
drone_city_nav/tests/: ambiguous_lidar_hit_tracker_test.cpp  clearance_field_test.cpp  corner_rounding_test.cpp  corridor_samples_io_test.cpp  corridor_test.cpp  current_lidar_overlay_test.cpp  debug_image_test.cpp  distance_field_test.cpp  final_trajectory_debug_io_test.cpp  grid_overlay_test.cpp  ground_lidar_ingestion_test.cpp  known_passage_debug_markers_test.cpp  known_passage_map_test.cpp  known_passage_solid_validation_test.cpp  known_passage_solid_volumes_test.cpp  known_passage_validation_test.cpp  known_static_lidar_hit_classifier_test.cpp  known_static_lidar_ingestion_test.cpp  known_static_lidar_planning_grid_integration_test.cpp  lidar_debug_node_config_test.cpp  lidar_debug_pointclouds_test.cpp  lidar_debug_renderer_test.cpp  lidar_debug_snapshot_pipeline_test.cpp  lidar_ingestion_decision_test.cpp  lidar_memory_hit_diagnostics_test.cpp  lidar_motion_compensation_test.cpp  lidar_pose_history_test.cpp  lidar_projection_test.cpp  lidar_radar_markers_test.cpp  lidar_snapshot_writer_test.cpp  obstacle_memory_provenance_ros_test.cpp  obstacle_memory_test.cpp  offboard_blackbox_test.cpp  offboard_debug_markers_test.cpp  offboard_path_follower_test.cpp  offboard_speed_controller_test.cpp  offboard_target_continuity_test.cpp  offboard_target_safety_test.cpp  offboard_trajectory_state_test.cpp  offboard_velocity_follower_invalid_input_test.cpp  (+54 more)
drone_city_nav/worlds/: generated_city.map2d  generated_city.sdf  generated_city_mixed_heights.sdf  known_passages.passages3d
scripts/: analyze_lidar_projection_snapshots.py  build.sh  build_dev_image.sh  capture_gazebo_scene_diagnostics.py  check_cpp_quality.sh  cleanup_sim_processes.sh  container_run.sh  dev_shell.sh  format_cpp_changed.sh  gazebo_gui_control.py  gazebo_process_cleanup.py  host_shell.sh  record_debug_bag.sh  record_debug_bag_host.sh  run_city_mvp.sh  run_city_mvp_host.sh  run_drone_nav_sim.sh  run_speed_sweep.sh  run_speed_sweep_host.sh  setup_px4_autopilot.sh  sim_gui.sh  sim_headless.sh  stop_sim.sh  test.sh  validate_city_mvp_headless.py  validate_drone_nav_headless.py  validate_gazebo_gui_launch_log.py
scripts/tests/: test_analyze_lidar_projection_snapshots.py  test_capture_gazebo_scene_diagnostics.py  test_container_entrypoints.py  test_cpp_source_size_contract.py  test_drone_model_sdf_contract.py  test_gazebo_gui_control.py  test_gazebo_process_cleanup.py  test_offboard_telemetry_contract.py  test_px4_mission_node.py  test_run_city_mvp_launch_contract.py  test_run_drone_nav_sim_launch_contract.py  test_topic_contract.py  (+3 more)
